<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:elevation="5dp"
    android:padding="10dp"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/iv_song_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/iv_description_song_picture"/>

        <TextView
            android:id="@+id/tv_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_text_song_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_text_artist_name"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_song_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_text_song_price"
            android:textSize="12sp"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>